refactor(cart): 重构购物车相关逻辑
- 优化了购物车数据结构和 Redis 存储方案
- 重新设计了购物车初始化、添加、删除等操作的逻辑
- 改进了版本控制和变更列表的处理方式- 优化了与数据库同步的逻辑
- 调整了相关配置项